--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -11,7 +11,10 @@
 	<UL>
 	  {% for city in state.cities|sort(attribute='name') %}
 	  <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+	  {% endfor %}
 	</UL>
       </LI>
+      {% endfor %}
+    </UL>
   </BODY>
 </HTML>
